[#52560963] Fix alignment of dataset column list types

--- a/app/assets/stylesheets/dataset/_database_column_list.scss
+++ b/app/assets/stylesheets/dataset/_database_column_list.scss
@@ -21,6 +21,7 @@
                 .type_name {
                     @include database-column-type;
                     height: 14px;
+                    vertical-align: top;
                     display: inline-block;
                     padding: 2px 8px 2px 8px;
                 }
